@@ -15,6 +15,7 @@ Enhancements:
 New APIs:
 
   * Annotations column (Dan Lucraft)
+  * Open popup menu at cursor/pointer locations (Dan Lucraft)
   
 New contributors:
 
